package com.javanto.services.calculator;

import java.util.Objects;

public interface Process {


    Object execute();
}
