@startuml

title __TASCHENRECHNERSERVICE's Class Diagram__\n

  package  {
    package com.javanto.app {
      class Application {
      }
    }
  }
  

  package  {
    package com.javanto.services.calculator {
      interface Calculator {
      }
    }
  }
  

  package  {
    package com.javanto.services.calculator {
      package com.javanto.services.calculator.standard {
        class Calculo {
        }
      }
    }
  }
  

  package  {
    package com.javanto.services.calculator {
      package com.javanto.services.calculator.standard {
        class Concatenation {
        }
      }
    }
  }
  

  package  {
    package com.javanto.services.calculator {
      package com.javanto.services.calculator.standard {
        class Organization {
        }
      }
    }
  }
  

  package  {
    package com.javanto.services.calculator {
      interface Process {
      }
    }
  }
  

  package  {
    package com.javanto.services.calculator {
      package com.javanto.services.calculator.standard {
        class SimpleCalculator {
        }
      }
    }
  }
  

  package  {
    class Starter {
    }
  }
  

  Application -up-|> Runnable
  Application o-- Calculator : calculator
  Calculo -up-|> Process
  Concatenation -up-|> Process
  Organization -up-|> Process
  SimpleCalculator -up-|> Calculator
  SimpleCalculator o-- Process : process


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
